# voitype

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.sh
src/voitype/: __init__.py  __main__.py  app.py  config.py  groq_client.py  state.py
src/voitype/handlers/: keyboard.py  mode.py
src/voitype/platform/: __init__.py  base.py  wayland.py  x11.py
src/voitype/services/: audio.py  clipboard.py  formatter.py  notify.py  sound.py
src/voitype/ui/: overlay.py  result_popup.py  settings_dialog.py  tray.py
